# c-ray-tracing

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: camera.c  camera.h  constants.c  constants.h  hit_record.c  hit_record.h  image.c  image.h  main.c  material.h  ray.c  ray.h  renderer.c  renderer.h  scatter_record.c  scatter_record.h  scene.c  scene.h  sphere.c  sphere.h  utils.c  utils.h  vec3.c  vec3.h
